<resources>
    <string name="app_name">FeedMyPet</string>
    <string name="cat_main_image">cat_main</string>
    <string name="feedCatButton">Feed Me!</string>
    <string name="txtLastFed">Last Fed:</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_pet_lblname">Name</string>
    <string name="create_pet_lbltype">typeOfPet</string>
    <string name="btnCreatePetSubmit">Create</string>


</resources>
