<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="60dp"
                android:layout_height="29dp"
                android:layout_weight=".25"
                android:text="@string/txtLastFed"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtTimeLastFed"
                android:layout_width="60dp"
                android:layout_height="91dp"
                android:layout_weight="1"
                android:text="time"
                android:textSize="24sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="324dp"
            android:contentDescription="@string/cat_main_image"
            app:srcCompat="@mipmap/catmain_background" />

        <Button
            android:id="@+id/btnFeedPet"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:text="@string/feedCatButton" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="test: update" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
