<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreatePetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.25"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/create_pet_lblname"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:id="@+id/txtPetName"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.25"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/create_pet_lbltype"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.75"
                android:id="@+id/spnPetType"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.25"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btnCreatePetSubmit"
                android:id="@+id/btnCreatePet"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>